Contest/Yandex/debug/DYandex.txt
src/DYandex.cc: In function ‘int main()’:
src/DYandex.cc:10:8: error: declaration of ‘auto a’ has no initializer
   auto a,b,c;
        ^
src/DYandex.cc:10:10: error: declaration of ‘auto b’ has no initializer
   auto a,b,c;
          ^
src/DYandex.cc:10:12: error: declaration of ‘auto c’ has no initializer
   auto a,b,c;
            ^
